--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^2.9.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-promise": "^2.0.0",
     "is-plain-obj": "^1.1.0",
     "temp-write": "^2.1.0"
   },
