--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "posttest": "npm run lint",
+    "lint": "eslint -c ./index.js --ignore-pattern test . && eslint -c ./ava.js test"
   },
   "files": [
     "index.js",
@@ -43,7 +45,7 @@
     "ava.js"
   ],
   "dependencies": {
-    "eslint-config-xo-space": "^0.14.0"
+    "eslint-config-xo": "^0.16.0"
   },
   "devDependencies": {
     "ava": "^0.16.0",
@@ -55,6 +57,6 @@
     "temp-write": "^2.1.0"
   },
   "peerDependencies": {
-    "eslint": ">=2.9.0"
+    "eslint": ">=3.6.0"
   }
 }
