--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "ava.js"
   ],
   "dependencies": {
-    "eslint-config-xo": "^0.16.0"
+    "eslint-config-xo": "^0.16.0",
+    "eslint-plugin-promise": "^3.3.0"
   },
   "devDependencies": {
     "ava": "^0.16.0",
