--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
   },
   "files": [
     "index.js",
-    "esnext.js",
+    "ava.js",
     "browser.js",
-    "ava.js"
+    "es5.js",
+    "esnext.js"
   ],
   "dependencies": {
     "eslint-config-xo": "^0.18.2",
