--- a/package.json
+++ b/package.json
@@ -36,28 +36,28 @@
   "scripts": {
     "test": "ava",
     "posttest": "npm run lint",
-    "lint": "eslint -c ./lazy.js --ignore-pattern test . && eslint -c ./ava.js test"
+    "lint": "npm run lint:src && npm run lint:test",
+    "lint:src": "eslint -c prettier -c ./full/index.js --ignore-pattern test .",
+    "lint:test": "eslint -c prettier -c ./full/ava.js --parser-options=ecmaVersion:6,sourceType:module test"
   },
   "files": [
     "index.js",
-    "ava.js",
-    "browser.js",
-    "es5.js",
-    "lazy.js"
+    "standalone.js",
+    "ava.js"
   ],
   "dependencies": {
-    "eslint-config-xo": "^0.20.1",
-    "eslint-plugin-es5": "^1.0.1",
-    "eslint-plugin-promise": "^3.3.0"
+    "eslint-config-xo": "^0.27.2",
+    "eslint-plugin-promise": "^4.2.1"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "eslint": "^4.0.0",
-    "eslint-plugin-import": "^2.0.1",
-    "is-plain-obj": "^1.1.0",
-    "temp-write": "^3.3.0"
+    "ava": "^2.4.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "is-plain-obj": "^2.0.0",
+    "temp-write": "^4.0.0"
   },
   "peerDependencies": {
-    "eslint": ">=4.0.0"
+    "eslint": ">=6.6.0"
   }
 }
