chore: update prettierrc and clean up test styling

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "useTabs": false,
   "printWidth": 89
 }
